update formatting and remove java version trickery