@@ -118,19 +118,8 @@ public class Client {
             if (tmp.equals("search")) {
                 validcommand = true;
                 String fertigkeit = ui.searchDialogue(eingabe);
-                /**
-                 * JAVA 11 WORKAROUND for java 16 feature
-                 */
-                List<Mitarbeiter> x;
-                if (JavaVersionHelper.getVersion() < 16) {
-                    // toList is supported since V16
-                    x = speicher.getCurrentListCopy().stream()
-                            .filter(ma -> ma.getExpertise().getErfahrungen().containsKey(fertigkeit))
-                            .collect(Collectors.toList());
-                } else {
-                    x = speicher.getCurrentListCopy().stream()
-                            .filter(ma -> ma.getExpertise().getErfahrungen().containsKey(fertigkeit)).toList();
-                }
+                List<Mitarbeiter> x = speicher.getCurrentListCopy().stream()
+                        .filter(ma -> ma.getExpertise().getErfahrungen().containsKey(fertigkeit)).toList();
                 if (x.isEmpty()) {
                     ui.displayExpertiseNotFound();
                 } else {
